apps/utility/haos/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: haos
spec:
  ports:
    - name: http 
      protocol: TCP
      port: 80
      targetPort: 8123
